 Logger,Logrepair: Add indexed tripid column to obd and gps tables
 Kml: Use tripids where possible instead of times to key on trips
 Kml: Warn if tripids are missing from obd or gps tables
 Kml: Don't output kml for trips without gps co-ordinates
 Initial add of simple trip comparison tool [mpg, fuel usage]
 Sim: dlopen generator takes a sub-seed
 Logger: Gracefully handle delayed gpsd startup

Version 0.12 (released 2010-01-03)
 ftdipty: Support user-specified device and vendor ids
 Logger: Support gpsd V3 protocol
 Sim: Support ATI, ATL{0,1}
 Sim: Tidy up linefeed handling throughout app

Version 0.11 (released 2009-11-25)
 Logger: Recognise multi-line serial output, break out line parsing
 Logger: Work on reading error codes
 Logger: Always clean up serial port on early exit
 Sim: bugfixes
 Sim: Move to stdlib read/write instead of stdio
 Sim: Simplify output mechanism
 Sim: Use /dev/ptmx if posix_openpt isn't available
 Sim: Optionally attach a screen session
 Sim: Add "Cycle" generator
 Sim: Add longdesc to generators so they can self-document
 Docs: Add manpage for obdsim-dbus
 Sim: Convert to C++. Make simport abstract class
 Sim: Implement posix, windows simport classes
 Logger: Don't offer to daemonise on windows
 Sim: Support logging all serial comms
 Sim: Allow command-line options for faking AT{Z,@1}
 Logger: Attempt to guess supported PIDs if car reports zero for 0100
 Sim: Add shell of megasquirt code

Version 0.10 (released 2009-10-31)
 Logger, conf: Ability to adjust serial baudrate
 Initial add of ftdi-pty proxy for systems without ftdi-sio
 conf: Add ability to write config file back to disk
 ftdipty can modify config file for obdgpslogger
 Logger, conf: Ability to configure logfile name
 Logger: Gracefully exit if a serial write fails
 Logger,doc: Hotplug docs
 Logger: cygwin compilation fixes
 Sim: Don't build socket generator without getaddrinfo symbol
 Logger: If obd device isn't available, exit [would log gps before]
